Steam4NET2/Steam4NET2/autogen/UserCommon.cs

// This file is automatically generated.
using System;
using System.Text;
using System.Runtime.InteropServices;

namespace Steam4NET
{

	public enum EAuthSessionResponse : int
	{
		k_EAuthSessionResponseOK = 0,
		k_EAuthSessionResponseUserNotConnectedToSteam = 1,
		k_EAuthSessionResponseNoLicenseOrExpired = 2,
		k_EAuthSessionResponseVACBanned = 3,
		k_EAuthSessionResponseLoggedInElseWhere = 4,
		k_EAuthSessionResponseVACCheckTimedOut = 5,
		k_EAuthSessionResponseAuthTicketCanceled = 6,
		k_EAuthSessionResponseAuthTicketInvalidAlreadyUsed = 7,
		k_EAuthSessionResponseAuthTicketInvalid = 8,
	};
	
	public enum EBeginAuthSessionResult : int
	{
		k_EBeginAuthSessionResultOK = 0,
		k_EBeginAuthSessionResultInvalidTicket = 1,
		k_EBeginAuthSessionResultDuplicateRequest = 2,
		k_EBeginAuthSessionResultInvalidVersion = 3,
		k_EBeginAuthSessionResultGameMismatch = 4,
		k_EBeginAuthSessionResultExpiredTicket = 5,
	};
	
	public enum EAppUsageEvent : int
	{
		k_EAppUsageEventGameLaunch = 1,
		k_EAppUsageEventGameLaunchTrial = 2,
		k_EAppUsageEventMedia = 3,
		k_EAppUsageEventPreloadStart = 4,
		k_EAppUsageEventPreloadFinish = 5,
		k_EAppUsageEventMarketingMessageView = 6,
		k_EAppUsageEventInGameAdViewed = 7,
		k_EAppUsageEventGameLaunchFreeWeekend = 8,
	};
	
	public enum ERegistrySubTree : int
	{
		k_ERegistrySubTreeNews = 0,
		k_ERegistrySubTreeApps = 1,
		k_ERegistrySubTreeSubscriptions = 2,
		k_ERegistrySubTreeGameServers = 3,
		k_ERegistrySubTreeFriends = 4,
		k_ERegistrySubTreeSystem = 5,
		k_ERegistrySubTreeAppOwnershipTickets = 6,
		k_ERegistrySubTreeLegacyCDKeys = 7,
	};
	
	public enum ELogonState : int
	{
		k_ELogonStateNotLoggedOn = 0,
		k_ELogonStateLoggingOn = 1,
		k_ELogonStateLoggingOff = 2,
		k_ELogonStateLoggedOn = 3,
	};
	
	public enum EVoiceResult : int
	{
		k_EVoiceResultOK = 0,
		k_EVoiceResultNotInitialized = 1,
		k_EVoiceResultNotRecording = 2,
		k_EVoiceResultNoData = 3,
		k_EVoiceResultBufferTooSmall = 4,
		k_EVoiceResultDataCorrupted = 5,
	};
	
	public enum EVACBan : int
	{
		k_EVACBanGoldsrc = 0,
		k_EVACBanSource = 1,
		k_EVACBanDayOfDefeatSource = 2,
	};
	
	public enum EUserHasLicenseForAppResult : int
	{
		k_EUserHasLicenseResultHasLicense = 0,
		k_EUserHasLicenseResultDoesNotHaveLicense = 1,
		k_EUserHasLicenseResultNoAuth = 2,
	};
	
	public enum ENewsUpdateType : int
	{
		k_EAppNews = 0,
		k_ESteamAds = 1,
		k_ESteamNews = 2,
		k_ECDDBUpdate = 3,
		k_EClientUpdate = 4,
	};
	
	public enum ESteamUsageEvent : int
	{
		k_ESteamUsageEventMarketingMessageView = 1,
		k_ESteamUsageEventHardwareSurvey = 2,
		k_ESteamUsageEventDownloadStarted = 3,
		k_ESteamUsageEventLocalizedAudioChange = 4,
	};
	
	public enum EClientStat : int
	{
		k_EClientStatP2PConnectionsUDP = 0,
		k_EClientStatP2PConnectionsRelay = 1,
		k_EClientStatP2PGameConnections = 2,
		k_EClientStatP2PVoiceConnections = 3,
		k_EClientStatBytesDownloaded = 4,
		k_EClientStatMax = 5,
	};
	
	public enum ENatType : int
	{
		eNatTypeUntested = 0,
		eNatTypeTestFailed = 1,
		eNatTypeNoUDP = 2,
		eNatTypeOpenInternet = 3,
		eNatTypeFullCone = 4,
		eNatTypeRestrictedCone = 5,
		eNatTypePortRestrictedCone = 6,
		eNatTypeUnspecified = 7,
		eNatTypeSymmetric = 8,
		eNatTypeSymmetricFirewall = 9,
		eNatTypeCount = 10,
	};
	
	public enum EMarketingMessageFlags : int
	{
		k_EMarketingMessageFlagsNone = 0,
		k_EMarketingMessageFlagsHighPriority = 1,
		k_EMarketingMessageFlagsPlatformWindows = 2,
		k_EMarketingMessageFlagsPlatformMac = 4,
		k_EMarketingMessageFlagsPlatformRestrictions = 6,
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct CNatTraversalStat
	{
		EResult m_eResult;
		ENatType m_eLocalNatType;
		ENatType m_eRemoteNatType;
		[MarshalAs(UnmanagedType.I1)]
		bool m_bMultiUserChat;
		[MarshalAs(UnmanagedType.I1)]
		bool m_bRelay;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct LogonFailure_t
	{
		EResult m_eResult;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct SteamServerConnectFailure_t
	{
		EResult m_eResult;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct LoggedOff_t
	{
		EResult m_eResult;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct SteamServersDisconnected_t
	{
		EResult m_eResult;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct ClientPrimaryChatDestinationSet_t
	{
		Byte m_bIsPrimary;
		Byte m_bWasPrimary;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct ClientAppNewsItemUpdate_t
	{
		ENewsUpdateType m_eNewsUpdateType;
		UInt32 m_uNewsID;
		UInt32 m_uAppID;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct ClientSteamNewsItemUpdate_t
	{
		ENewsUpdateType m_eNewsUpdateType;
		UInt32 m_uNewsID;
		UInt32 m_uHaveSubID;
		UInt32 m_uNotHaveSubID;
		UInt32 m_uHaveAppID;
		UInt32 m_uNotHaveAppID;
		UInt32 m_uHaveAppIDInstalled;
		UInt32 m_uHavePlayedAppID;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct ClientGameServerDeny_t
	{
		UInt32 m_uAppID;
		UInt32 m_unGameServerIP;
		UInt16 m_usGameServerPort;
		UInt16 m_bSecure;
		UInt32 m_uReason;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct PrimaryChatDestinationSet_t
	{
		Byte m_bIsPrimary;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct UserPolicyResponse_t
	{
		Byte m_bSecure;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct ClientSteamNewsClientUpdate_t
	{
		Byte m_eNewsUpdateType;
		Byte m_bReloadCDDB;
		UInt32 m_unCurrentBootstrapperVersion;
		UInt32 m_unCurrentClientVersion;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct IPCFailure_t
	{
		Byte m_eFailureType;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct LegacyCDKeyRegistered_t
	{
		EResult m_eResult;
		UInt32 m_iAppID;
		[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 64)]
		string m_rgchCDKey;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct GuestPassSent_t
	{
		EResult m_eResult;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct GuestPassAcked_t
	{
		EResult m_eResult;
		UInt32 m_unPackageID;
		UInt64 m_gidGuestPassID;
		UInt64 m_ulGuestPassKey;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct GuestPassRedeemed_t
	{
		EResult m_eResult;
		UInt32 m_unPackageID;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct UpdateGuestPasses_t
	{
		EResult m_eResult;
		UInt32 m_cGuestPassesToGive;
		UInt32 m_cGuestPassesToRedeem;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct CheckPasswordResponse_t
	{
		EResult m_EResult;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct ResetPasswordResponse_t
	{
		EResult m_EResult;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct AppLifetimeNotice_t
	{
		UInt32 m_nAppID;
		Int32 m_nInstanceID;
		[MarshalAs(UnmanagedType.I1)]
		bool m_bExiting;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct AppOwnershipTicketReceived_t
	{
		UInt32 m_nAppID;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct PasswordChangeResponse_t
	{
		EResult m_EResult;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct EmailChangeResponse_t
	{
		EResult m_EResult;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct SecretQAChangeResponse_t
	{
		EResult m_EResult;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct CreateAccountResponse_t
	{
		EResult m_EResult;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct SendForgottonPasswordEmailResponse_t
	{
		EResult m_EResult;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct ResetForgottonPasswordResponse_t
	{
		EResult m_EResult;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct DownloadFromDFSResponse_t
	{
		EResult m_EResult;
		[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 128)]
		string m_rgchURL;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct DRMSDKFileTransferResult_t
	{
		EResult m_EResult;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct ValidateAuthTicketResponse_t
	{
		UInt64 m_SteamID;
		EAuthSessionResponse m_eAuthSessionResponse;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct MsgWebAuthToken_t
	{
		[MarshalAs(UnmanagedType.I1)]
		bool m_bValid;
		[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 512)]
		string m_Token;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct MicroTxnAuthorizationResponse_t
	{
		UInt32 m_unAppID;
		UInt64 m_ulOrderID;
		Byte m_bAuthorized;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct EncryptedAppTicketResponse_t
	{
		EResult m_eResult;
	};
	
}
